<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">BookMark</string>
    <string name="title_profile">Profile</string>
    <string name="txt_join_our_community">Join our community and personalize your news experience.</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_i_agree_to_newsline">I agree to Newsline </string>
    <string name="txt_terms_and_policy">Terms, &amp; Policy.</string>
    <string name="txt_already">Already have an account? </string>
    <string name="txt_signin"> Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="txt_this_profile">This profile will appear public so people can find you and the stories you share</string>
    <string name="txt_create_pub">Create Public Profile</string>

    <string name="continue_with_google">"Continue with Google"</string>
    <string name="continue_with_apple">"Continue with Apple"</string>
    <string name="welcome_let_s_dive_in_into_your_account">"Welcome! Let's dive in into your account!"</string>
    <string name="continue_with_meta">"Continue with Meta"</string>
    <string name="continue_with_x">"Continue with X"</string>
    <string name="sign_in_with_password">"Sign in with password"</string>
    <string name="don_t_have_an_account">"Don't have an account?"</string>

    <!-- String array for Spinner -->
    <string-array name="stringSelectTopic">
        <item>Select</item>
        <item>Technology</item>
        <item>Science</item>
        <item>Health</item>
        <item>Business</item>
        <item>Politics</item>
        <item>Sport</item>
        <item>Fashion</item>
        <item>Entertainment</item>
        <item>Finance</item>

    </string-array>

    <string name="txt_add_cover_image">Add cover image </string>
    <string name="txt_the_rise">The Rise of Artificial Intelligence: How AI is Shaping Our Lives</string>
    <string name="txt_signup">Sign Up</string>
    <string name="txt_continue">continue</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="bio">Bio</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="txt_unmasking">Unmasking the Truth: Investigative Report Exposes Widespread Political Corruption</string>
    <string name="txt_in_a_groundbreaking">In a groundbreaking investigative report, a team of journalists has unveiled a web of political corruption that has been shrouded in secrecy for far too long. This in-depth exposé shines a light on the dark underbelly of power. revealing shocking revelations and implicating high-profile figures in a complex network of unethical practices.</string>
    <string name="txt_saved_to_bookmark">Saved to bookmark</string>
    <string name="story">Story</string>
    <string name="txt_your_title">Your Title</string>
    <string name="title">Title</string>
    <string name="preview">Preview</string>
    <string name="write_stories">Write Stories</string>
    <string name="the_cable_news">The Cable News Network is a multinational news channel and website headquartered in Atlanta. Georgia, U.S</string>
    <string name="this_investigative">This investigative report is a powerful reminder of the importance of transparency and accountability in our political system.</string>
    <string name="following">Following</string>
    <string name="reading_list">Reading List</string>
    <string name="comment_3_2_k">Comment(3.2)K</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="cancle">Cancel</string>
    <string name="done">Done</string>
    <string name="add_new_collection">Add New Collection</string>
    <string name="collection_title">Collection Title</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_story_has_been_npublished">Your story has been\npublished!</string>
    <string name="website">Website</string>
    <string name="cloud_client_id">588875229591-el4qcn8krp5jtdf6psqfrnqv28gk84ue.apps.googleusercontent.com</string>
    <string name="view_all">View All</string>
    <string name="newsline">Newsline</string>
    <string name="welcome_back">Welcome back</string>
    <string name="_3_days_ago">3 days ago</string>
    <string name="you_re_all_set">You\'re All Set!</string>
    <string name="start_exploring_discovering_and_engaging_with_the_news">Start exploring, discovering, and engaging with the news.</string>
    <string name="cnn_news">CNN News</string>
    <string name="_5_mins_read">5 mins read</string>
    <string name="_245_8k">245.8k</string>
    <string name="_3_2k">3.2k</string>
    <string name="in_a_groundbreaking_investigative_report_a_team_of_journalists_has_unveiled_a_web_of_political_corruption_that_has_been_shrouded_in_secrecy_for_far_too_long_this_in_depth_expose_shines_a_light_on_the_dark_underbelly_of_power_revealing_shocking_revelations_and_implicating_high_profile_figures_in_a_complex_network_of_unethical_practices">In a groundbreaking investigative report, a team of journalists has unveiled a web of political corruption that has been shrouded in secrecy for far too long. This in-depth expose shines a light on the dark underbelly of power, revealing shocking revelations and implicating high-profile figures in a complex network of unethical practices.</string>
    <string name="_19_2m_followers">19.2M followers</string>
    <string name="the_cable_news_network_is_a_multinational_news_channel_and_website_headquartered_in_atlanta_georgia_u_s">The Cable News Network is a multinational news channel and website headquartered in Atlanta, Georgia, U.S.</string>
    <string name="_3_2k_comments">3.2K comments</string>
    <string name="save_to_bookmark">Save to bookmark</string>
    <string name="_new">New</string>
    <string name="bookmark">Bookmark</string>
    <string name="empty">Empty</string>
    <string name="you_have_not_saved_ant_stories_to_this_ncollection">You have not saved ant stories to this\ncollection</string>
    <string name="your_title">Your Title</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="please_enter_your_email_and_we_will_send_an_otp_code_in_the_next_step_to_reset_your_password">Please enter your email and we will send an OTP code in the next step to reset your password.</string>
    <string name="andrew_ainsley">Andrew Ainsley</string>
    <string name="trending">Trending</string>
    <string name="all_stories">All Stories</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="customize_your_news_feed">Customize your news feed</string>
    <string name="tell_us_what_you_re_interested_in_to_tailor_your_news_experience_don_t_worry_you_can_always_update_your_preference_later">Tell us what you\'re interested in to tailor your news experience. Don\'t worry, you can always update your preference later</string>
    <string name="_continue">continue</string>
    <string name="the_rise_of_artificial_intelligence_how_ai_is_shaping_our_lives">The Rise of Artificial Intelligence: How Ai is Shaping Our Lives</string>
    <string name="you">You</string>
    <string name="now">Now</string>
    <string name="your_story">Your Story</string>
    <string name="profile">Profile</string>
    <string name="www_andrewainsley_yourdomain">www.andrewainsley.yourdomain</string>
    <string name="tech_enthusiast_likes_to_share_stories_about_technology_and_the_digital_world">Tech enthusiast, likes to share stories about technology, and the digital world.</string>
    <string name="_0">0</string>
    <string name="_4_259">4.259</string>
    <string name="_145">145</string>
    <string name="stories">Stories</string>
    <string name="followers">Followers</string>
    <string name="publish">Publish</string>
    <string name="select_topic">Select Topic</string>
    <string name="add_tags">Add Tags</string>
    <string name="type_tag_and_enter">Type tag and enter&#8230;</string>
    <string name="recent_stories">Recent Stories</string>
    <string name="please_enter_your_email_and_password_to_sign_in">Please enter your email and password to sign in.</string>
    <string name="sign_in_succssful">Sign in succssful!</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="you_will_be_directed_to_the_homepage">You will be directed to the homepage.</string>
    <string name="don_t_forget_to_share_with_your_friends_to_let_them_know_you_have_an_amazing_story">Don\'t forget to share with your friends to let them know you have an amazing story!</string>
    <string name="unmasking_the_truth_investigative_report_exposes_widespread_political_corruption">Unmasking the Truth: Investigative Report Exposes Widespread Political Corruption</string>
    <string name="skip">Skip</string>
    <string name="all">All</string>
    <string name="entertainment">Entertainment</string>
    <string name="politics">politics</string>
    <string name="stay_informed_anytime_anywhere">Stay Informed, Anytime, Anywhere</string>
    <string name="welcome_to_our_news_app_your_go_to_source_for_breaking_news_exclusive">Welcome to our news app, your go-to source for breaking news, exclusive</string>

    <string name="back_to_home">Back to Home</string>
    <string name="view_story">View Story</string>
    <string name="follow">Follow</string>
    <string name="edit_story">Edit Story</string>
    <string name="delete_story">Delete Story</string>
    <string name="more_from">More from</string>
</resources>