<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.screen.article.PreviewArticleFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPreViewStart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPreViewEnd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivArrowStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back_arrow"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="@id/glPreViewStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPreview"
        style="@style/writeStories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ivArrowStory"
        app:layout_constraintEnd_toStartOf="@id/tvContinue"
        app:layout_constraintStart_toEndOf="@id/ivArrowStory"
        app:layout_constraintTop_toTopOf="@+id/ivArrowStory" />

    <TextView
        android:id="@+id/tvContinue"
        style="@style/singleBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/_continue"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/tvPreview"
        app:layout_constraintEnd_toEndOf="@id/glPreViewEnd"
        app:layout_constraintTop_toTopOf="@+id/tvPreview" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glPreViewEnd"
        app:layout_constraintStart_toStartOf="@id/glPreViewStart"
        app:layout_constraintTop_toBottomOf="@+id/tvContinue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/dark_white"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="false"
                app:layout_constraintDimensionRatio="16:10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgPreview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_cute_girl_with_robot"
                    app:layout_constraintEnd_toEndOf="@id/glPreViewEnd"
                    app:layout_constraintStart_toStartOf="@id/glPreViewStart"
                    app:layout_constraintTop_toBottomOf="@id/ivArrowStory" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvTitle"
                style="@style/articleHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:includeFontPadding="false"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="4dp"
                android:ellipsize="start"
                android:maxLines="2"
                android:text="@string/the_rise_of_artificial_intelligence_how_ai_is_shaping_our_lives"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvImage" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/img_girl_profile"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvProfileName"
                style="@style/smallTextTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/andrew_ainsley"
                app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
                app:layout_constraintStart_toEndOf="@id/ivProfile"
                app:layout_constraintTop_toTopOf="@+id/ivProfile" />

            <TextView
                android:id="@+id/tvYou"
                style="@style/smallTextTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/you"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="@+id/tvProfileName"
                app:layout_constraintStart_toEndOf="@id/tvProfileName"
                app:layout_constraintTop_toTopOf="@id/tvProfileName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAgo"
                style="@style/fiveMinutesRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/_5_mins_read"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvYou" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNow"
                style="@style/fiveMinutesRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/now"
                app:layout_constraintBottom_toBottomOf="@id/tvAgo"
                app:layout_constraintStart_toEndOf="@id/tvAgo"
                app:layout_constraintTop_toTopOf="@+id/tvAgo" />

            <TextView
                android:id="@+id/tvStory"
                style="@style/poppins"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:gravity="top"
                android:text="@string/your_story"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAgo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>