<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.screen.auth.CreateAccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp">

            <ImageView
                android:id="@+id/ivBackArrowCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCreateAccunt"
                style="@style/headText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txt_create_account"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:drawableEnd="@drawable/img_girl_with_laptop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivBackArrowCreate" />

            <TextView
                android:id="@+id/tvNewsExperience"
                style="@style/smallText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_join_our_community"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCreateAccunt" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNewsExperience">

                <include
                    android:id="@+id/includeFragAccount"
                    layout="@layout/layout_email_password"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clCreateAccount"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/cbIAgree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/singleBoldText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/txt_i_agree_to_newsline"
                    android:paddingStart="5dp"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/etFillPassWord" />

                <TextView
                    android:id="@+id/tvTerms"
                    style="@style/greenColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:layout_marginStart="5dp"
                    android:text="@string/txt_terms_and_policy" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/dark_white"
                android:layout_marginTop="25dp"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view">

                <TextView
                    android:id="@+id/tvAlreadyAccount"
                    style="@style/singleBoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_already"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvSgnIn"
                    style="@style/greenColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/txt_signin"
                    android:textColor="@color/blue" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutNewsFeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent">

                <include
                    android:id="@+id/btnNewFeed"
                    layout="@layout/layout_one_button" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

